--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <div class="imgBx">
             <img src="img/profile_photo.png">
           </div>
-          <h2>Mustafa KIZILTAY<br><span>GIDA MÜHENDİSİ </span><br><span>MOBİL YAZILIM mÜHENDİSİ </span></h2>
+          <h2>Mustafa KIZILTAY<br><span>GIDA MÜHENDİSİ </span><br><span>MOBİL YAZILIM MÜHENDİSİ </span></h2>
         </div>
 
         <div class="info about">
           <div class="maintitle-L">
             <img src="res/prof.svg" alt="profile Logo"/>
-            <div class="title"><h3 class="title">about Info</h3></div>
+            <div class="title"><h3 class="title">PROFİL</h3></div>
             <div class="rectangle"></div>
           </div>
           <ul class="about list">
@@ -47,7 +47,7 @@
         <div class="info contact">
           <div class="maintitle-L">
             <img src="res/contct.svg" alt="contact Logo"/>
-            <div class="title"><h3 class="title">Contact Info</h3></div>
+            <div class="title"><h3 class="title">İLETİŞİM</h3></div>
             <div class="rectangle"></div>
           </div>
           <ul>
@@ -77,7 +77,7 @@
         <div class="info ability">
           <div class="maintitle-L">
             <img src="res/advnc.svg" alt="adventage Logo"/>
-            <div class="title"><h3 class="title">PERSONAL ABILITIES</h3></div>
+            <div class="title"><h3 class="title">KİŞİSEL YETENEKLER</h3></div>
             <div class="rectangle"></div>
           </div>
           <ul class="ability list">
