--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="imgBx">
             <img src="img/profile_photo.png">
           </div>
-          <h2>Mustafa KIZILTAY<br><span>GIDA MÜHENDİSİ </span><br><span>MOBİL YAZILIM MÜHENDİSİ </span></h2>
+          <h2>Mustafa KIZILTAY<br><span>GIDA MÜHENDİSİ </span><br><span>MOBİL YAZILIM mÜHENDİSİ </span></h2>
         </div>
 
         <div class="info about">
@@ -53,23 +53,27 @@
           <ul>
             <li>
               <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-              <span class="text">+90 537 307 1635</span>
+              <span class="text"><a href="tel:+905373071635">+90 537 307 1635</a></span>
             </li>
             <li>
               <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-              <span class="text">mkiziltay@hotmail.com</span>
+              <span class="text"><a href="mailto:mkiziltay@hotmail.com">mkiziltay@hotmail.com</a></span>
             </li>
             <li>
               <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-              <span class="text">linkedin.com</span>
+              <span class="text"><a href="https://tr.linkedin.com/in/mkiziltay" target="_blank"> Linkedin.com</a></span>
             </li>
             <li>
-              <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-              <span class="text">github.com</span>
+              <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+              <span class="text"><a href="https://github.com/mkiziltay" target="_blank"> Github.com</a></span>
+            </li>
+            <li>
+              <span class="icon"><i class="fa fa-medium" aria-hidden="true"></i></span>
+              <span class="text"><a href="https://medium.com/@mkiziltay" target="_blank"> Medium.com</a></span>
             </li>
             <li>
               <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-              <span class="text">Ortahisar, TRABZON</span>
+              <span class="text"><a target="_blank" href="https://www.google.com/maps?q=ortahisar/Trabzon" >Ortahisar, TRABZON</a></span>
             </li>
           </ul>
         </div>
@@ -82,23 +86,23 @@
           </div>
           <ul class="ability list">
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
-              YENILIKÇILIK  </li>
+              YENİLİKÇİLİK  </li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
               HEDEFLER KOYMA  </li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
               YARATICILIK</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
-              HIZLI VE ETKILI KARAR</li>
+              HIZLI VE ETKİLİ KARAR</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
-              ZAMAN YÖNETIMI</li>
+              ZAMAN YÖNETİMİ</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
-              İŞ YÖNETIMI</li>
+              İŞ YÖNETİMİ</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
               TAKIM ÇALIŞMASI </li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
               PROBLEM ÇÖZME</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
-              BILGI YÖNETIMI</li>
+              BİLGİ YÖNETİMİ</li>
             <li><span class="icon"><i class="fa fa-certificate" aria-hidden="true"></i></span>
               İLETİŞİM</li>
           </ul>
