--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <!-- full body --> 
-  <body>
+  <body oncontextmenu="return false;">
     <div class="container">
       <!-- left column -->
       <div class="left_Side">
